# scaler_fixed

./: README.md
Scalar-project-main/: Dockerfile  MANIFEST.in  README.md  inference.py  metadata.json  openenv.yaml  pyproject.toml  requirements.txt
Scalar-project-main/server/: app.py
Scalar-project-main/src/: App.tsx  env.py  models.py  tasks.py
