[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussocial_moderation"
version = "1.0.0"
description = "A real-world content moderation environment for training and evaluating AI safety agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Susheen", email = "shettysusheen@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "google-genai>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "aiofiles>=23.1.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
openenv-server = "server.app:main"
nexussocial-moderation = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/susheen/patient-triage"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "server*"]
